--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ video {
     </video>
   </div>
   <div class="quote">
-    Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer.
+    Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer. Cool.
   </div>
   <script src="app.js"></script>
 </body>
