--- a/pages/about.html
+++ b/pages/about.html
@@ -304,7 +304,7 @@ video {
 footer {
   margin: 36px 0 36px 0;
   text-align: center;
-  font-size: small;
+  font-size: x-small;
 }
 
 nav a:link {
@@ -590,7 +590,7 @@ a:visited:hover {
             </div>
         </div>
     </main>
-    <footer>© Tino Selic 2024</footer>
+    <footer>© 2024 Tino Selic</footer>
     <script src="../app.js"></script>
 </body>
 
