--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@ video {
   color: #fff;
 }
 
+footer {
+  margin: 36px 0 36px 0;
+  text-align: center;
+  font-size: x-small;
+}
+
 @media only screen and (min-width: 796px) {
   nav {
     display: flex;
@@ -287,8 +293,9 @@ video {
     </video>
   </div>
   <div class="quote">
-    Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer. Cool.
+    Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer.
   </div>
+  <footer>© 2024 Tino Selic. All rights reserved.</footer>
   <script src="app.js"></script>
 </body>
 
