--- a/pages/work.html
+++ b/pages/work.html
@@ -121,7 +121,7 @@
       <p class="title">Space Jellyfish (2018)</p>
     </div>
   </main>
-  <footer>© Tino Selic 2024</footer>
+  <footer>© 2024 Tino Selic</footer>
   <script src="../app.js"></script>
 </body>
 
