Dynamic footer added.

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ footer {
   <div class="quote">
     Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer.
   </div>
-  <footer>© 2024 Tino Selic. All rights reserved.</footer>
+  <footer id="copyright"></footer>
   <script src="app.js"></script>
 </body>
 
