--- a/pages/about.html
+++ b/pages/about.html
@@ -590,7 +590,7 @@ a:visited:hover {
             </div>
         </div>
     </main>
-    <footer>© 2024 Tino Selic</footer>
+    <footer id="copyright"></footer>
     <script src="../app.js"></script>
 </body>
 
