--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@ video {
 }
 
 footer {
-  margin: 36px 0 36px 0;
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   font-size: x-small;
 }
