--- a/pages/about.html
+++ b/pages/about.html
@@ -9,25 +9,25 @@
     <style>
         @font-face {
   font-family: "FreeSans";
-  src: url("fonts/FreeSans.woff") format('woff');
+  src: url("../fonts/FreeSans.woff") format('woff');
 }
 
 @font-face {
   font-family: "FreeSans";
-  src: url("fonts/FreeSansBold.woff") format('woff');
+  src: url("../fonts/FreeSansBold.woff") format('woff');
   font-weight: bold;
 }
 
 @font-face {
   font-family: "FreeSans";
-  src: url("fonts/FreeSansBoldOblique.woff") format('woff');
+  src: url("../fonts/FreeSansBoldOblique.woff") format('woff');
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
   font-family: "FreeSans";
-  src: url("fonts/FreeSansOblique.woff") format('woff');
+  src: url("../fonts/FreeSansOblique.woff") format('woff');
   font-style: italic;
 }
 
