2024_adungu_and_engoma updated.

--- a/pages/work.html
+++ b/pages/work.html
@@ -26,99 +26,99 @@
     <div class="project">
       <a href="2024/2024_adungu_and_engoma.html">
         <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="">
+        Adungu & Engoma (2024)
       </a>
-      <p class="title">Adungu & Engoma (2024)</p>
     </div>
     <!-- 
     <div class="project">
       <a href="2023_sara_hilden.html">
         <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
+      Grönlund-Nisunen: Website (2024)
       </a>
-      <p class="title">Grönlund-Nisunen: Website (2024)</p>
     </div>
     <div class="project">
       <a href="2023_sara_hilden.html">
         <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
+      AURORA (2024)
       </a>
-      <p class="title">AURORA (2024)</p>
     </div> -->
     <div class="project">
       <a href="2024/2024_hibiscus.html">
         <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="">
+        Hibiscus (2024)
       </a>
-      <p class="title">Hibiscus (2024)</p>
     </div>
     <div class="project">
       <a href="2024/2024_marko_vuokola_nordea.html">
         <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="">
+        Marko Vuokola: Screen Installation Concept Visualisation (2024)
       </a>
-      <p class="title">Marko Vuokola: Screen Installation Concept Visualisation (2024)</p>
     </div>
     <div class="project">
       <a href="2023/2023_piru.html">
         <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="">
+        Piru (2023)
       </a>
-      <p class="title">Piru (2023)</p>
     </div>
     <div class="project">
       <a href="2023/2023_colour_and_perception.html">
         <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="">
+        Colour and Perception (2023)
       </a>
-      <p class="title">Colour and Perception (2023)</p>
     </div>
     <div class="project">
       <a href="2023/2023_gn_843_m3h.html">
         <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="">
+        Grönlund-Nisunen: 84,3 m3/h (2023)
       </a>
-      <p class="title">Grönlund-Nisunen: 84,3 m3/h (2023)</p>
     </div>
     <div class="project">
       <a href="2023/2023_sad.html">
         <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
+        SAD (2023)
       </a>
-      <p class="title">SAD (2023)</p>
     </div>
     <div class="project">
       <a href="2022/2022_rdac.html">
         <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
+        RD:AC (2022)
       </a>
-      <p class="title">RD:AC (2022)</p>
     </div>
     <div class="project">
       <a href="2022/2022_forum_mentoring_brochure.html">
         <img class="gallery" src="2022/2022_ForumMentoring_Brochure_1.jpg" alt="">
+        Forum Mentoring eV: Quality Standard Brochure (2022)
       </a>
-      <p class="title">Forum Mentoring eV: Quality Standard Brochure (2022)</p>
     </div>
     <div class="project">
       <a href="2021/2021_watch_out.html">
         <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
+        Watch Out! (2021)
       </a>
-      <p class="title">Watch Out! (2021)</p>
     </div>
     <div class="project">
       <a href="2021/2021_sunrisepunk.html">
         <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
+        Sunrisepunk (2021)
       </a>
-      <p class="title">Sunrisepunk (2021)</p>
     </div>
     <div class="project">
       <a href="2021/2021_blue_odyssey.html">
         <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
+        Blue Odyssey (2021)
       </a>
-      <p class="title">Blue Odyssey (2021)</p>
     </div>
     <div class="project">
       <a href="2020/2020_clandestine_cult.html">
         <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
+        Clandestine Cult (2020)
       </a>
-      <p class="title">Clandestine Cult (2020)</p>
     </div>
     <div class="project">
       <a href="2018/2018_space_jellyfish.html">
         <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
+        Space Jellyfish (2018)
       </a>
-      <p class="title">Space Jellyfish (2018)</p>
     </div>
   </main>
   <footer id="copyright"></footer>
