2024_gn_website added, website titles updated.

--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="../../assets/favicon.svg" />
   <link rel="stylesheet" href="../../style.css" />
-  <title>Tino Selić</title>
+  <title>Tino Selić - Title (year)</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <div class="logo"><a href="../../index.html"><img src="../../assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="../../assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="../../index.html" style="color: #fff;">Work</a></li>
+        <li><a href="../work.html" style="color: #fff;">Work</a></li>
         <li><a href="../about.html">About</a></li>
         <div class="closeMenu"><img src="../../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
@@ -35,6 +35,7 @@
       <div class="column left">
         <p>
           <i>Description</i>
+          <br>
           <br>
           Lorem ipsum...
           <br>
