--- a/pages/work.html
+++ b/pages/work.html
@@ -23,19 +23,7 @@
     </nav>
   </header>
   <main>
-    <div class="project">
-      <a href="2024/2024_adungu_and_engoma.html">
-        <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="">
-        Adungu & Engoma (2024)
-      </a>
-    </div>
     <!-- 
-    <div class="project">
-      <a href="2023_sara_hilden.html">
-        <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
-      Grönlund-Nisunen: Website (2024)
-      </a>
-    </div>
     <div class="project">
       <a href="2023_sara_hilden.html">
         <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
@@ -43,32 +31,44 @@
       </a>
     </div> -->
     <div class="project">
+      <a href="2024/2024_gn_website.html">
+        <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
+      Grönlund-Nisunen: Artists' Website g-n.fi (2024)
+      </a>
+    </div>
+    <div class="project">
+      <a href="2024/2024_adungu_and_engoma.html">
+        <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
+        Adungu & Engoma (2024)
+      </a>
+    </div>
+    <div class="project">
       <a href="2024/2024_hibiscus.html">
-        <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="">
+        <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
         Hibiscus (2024)
       </a>
     </div>
     <div class="project">
       <a href="2024/2024_marko_vuokola_nordea.html">
-        <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="">
+        <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
         Marko Vuokola: Screen Installation Concept Visualisation (2024)
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_piru.html">
-        <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="">
+        <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
         Piru (2023)
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_colour_and_perception.html">
-        <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="">
+        <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
         Colour and Perception (2023)
       </a>
     </div>
     <div class="project">
-      <a href="2023/2023_gn_843_m3h.html">
-        <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="">
+      <a href="2023/2023_gn_843m3h.html">
+        <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
         Grönlund-Nisunen: 84,3 m3/h (2023)
       </a>
     </div>
