Dynamic font sizes added.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,6 @@ video {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: small;
   line-height: 1.5;
   text-align: center;
   color: #fff;
@@ -232,7 +231,6 @@ footer {
   }
   
   nav .mainMenu li a {
-    font-size: small;
     line-height: 76px;
   }
 
@@ -257,6 +255,14 @@ footer {
 }
 
 @media only screen and (min-width: 1920px) {
+  * {
+    font-size: large;
+  }
+
+  footer {
+    font-size: small;
+  }
+
   nav .logo {
     padding-left: 400px;
   }
