Large screen font size from large to medium.

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ footer {
 
 @media only screen and (min-width: 1920px) {
   * {
-    font-size: large;
+    font-size: medium;
   }
 
   footer {
