--- a/pages/about.html
+++ b/pages/about.html
@@ -456,7 +456,7 @@
 
     @media only screen and (min-width: 1920px) {
       * {
-        font-size: large;
+        font-size: medium;
       }
 
       footer {
