--- a/index.html
+++ b/index.html
@@ -8,273 +8,277 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
   <style>
     @font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSans.woff") format('woff');
-}
+      font-family: "FreeSans";
+      src: url("fonts/FreeSans.woff") format('woff');
+    }
 
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansBold.woff") format('woff');
-  font-weight: bold;
-}
+    @font-face {
+      font-family: "FreeSans";
+      src: url("fonts/FreeSansBold.woff") format('woff');
+      font-weight: bold;
+    }
 
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansBoldOblique.woff") format('woff');
-  font-weight: bold;
-  font-style: italic;
-}
+    @font-face {
+      font-family: "FreeSans";
+      src: url("fonts/FreeSansBoldOblique.woff") format('woff');
+      font-weight: bold;
+      font-style: italic;
+    }
 
-@font-face {
-  font-family: "FreeSans";
-  src: url("fonts/FreeSansOblique.woff") format('woff');
-  font-style: italic;
-}
+    @font-face {
+      font-family: "FreeSans";
+      src: url("fonts/FreeSansOblique.woff") format('woff');
+      font-style: italic;
+    }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  color: #fff;
-  font-family: "FreeSans", sans-serif;
-  font-size: small;
-  scroll-behavior: smooth;
-  /* cursor: crosshair; */
-}
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      color: #fff;
+      font-family: "FreeSans", sans-serif;
+      font-size: small;
+      scroll-behavior: smooth;
+      /* cursor: crosshair; */
+    }
 
-body {
-  background: #000;
-}
+    body {
+      background: #000;
+    }
 
-nav {
-  background-color: rgba(0, 0, 0, 0);
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 2;
-}
+    nav {
+      background-color: rgba(0, 0, 0, 0);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 2;
+    }
 
-nav .logo {
-  margin-top: 18px;
-  padding-left: 18px;
-  width: fit-content;
-}
+    nav .logo {
+      margin-top: 18px;
+      padding-left: 18px;
+      width: fit-content;
+    }
 
-nav .logo img {
-  height: 40px;
-  cursor: pointer;
-}
+    nav .logo img {
+      height: 40px;
+      cursor: pointer;
+    }
 
-nav .openMenu {
-  display: block;
-  position: absolute;
-  top: 26px;
-  right: 18px;
-}
+    nav .openMenu {
+      display: block;
+      position: absolute;
+      top: 26px;
+      right: 18px;
+    }
 
-nav .openMenu img {
-  height: 26px;
-  cursor: pointer;
-  filter: invert();
-}
+    nav .openMenu img {
+      height: 26px;
+      cursor: pointer;
+      filter: invert();
+    }
 
-nav .mainMenu {
-  height: 100vh;
-  margin-top: 18px;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: top 1s ease;
-}
+    nav .mainMenu {
+      height: 100vh;
+      margin-top: 18px;
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transition: top 1s ease;
+    }
 
-nav .mainMenu li {
-  padding-left: 18px;
-}
+    nav .mainMenu li {
+      padding-left: 18px;
+    }
 
-nav .mainMenu li a {
-  line-height: 60px;
-}
+    nav .mainMenu li a {
+      line-height: 60px;
+    }
 
-nav .mainMenu .closeMenu {
-  display: block;
-  position: absolute;
-  top: 26px;
-  right: 18px;
-}
+    nav .mainMenu .closeMenu {
+      display: block;
+      position: absolute;
+      top: 26px;
+      right: 18px;
+    }
 
-nav .mainMenu .closeMenu img {
-  height: 26px;
-  cursor: pointer;
-  filter: invert();
-}
+    nav .mainMenu .closeMenu img {
+      height: 26px;
+      cursor: pointer;
+      filter: invert();
+    }
 
-nav a:link {
-  text-decoration: none;
-  color: #999;
-}
+    nav a:link {
+      text-decoration: none;
+      color: #999;
+    }
 
-nav a:hover {
-  color: #fff;
-}
+    nav a:hover {
+      color: #fff;
+    }
 
-nav a:visited {
-  color: #999;
-}
+    nav a:visited {
+      color: #999;
+    }
 
-nav a:visited:hover {
-  color: #fff;
-}
+    nav a:visited:hover {
+      color: #fff;
+    }
 
-a:link {
-  text-decoration: underline;
-  text-underline-offset: 2px;
-}
+    a:link {
+      text-decoration: underline;
+      text-underline-offset: 2px;
+    }
 
-a:hover {
-  text-decoration: underline;
-  color: #999;
-}
+    a:hover {
+      text-decoration: underline;
+      color: #999;
+    }
 
-a:visited {
-  color: #fff;
-}
+    a:visited {
+      color: #fff;
+    }
 
-a:visited:hover {
-  color: #999;
-}
+    a:visited:hover {
+      color: #999;
+    }
 
-video {
-  display: flex;
-  justify-content: center;
-}
+    video {
+      display: flex;
+      justify-content: center;
+    }
 
-.background-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* height: 100%;
+    .background-video {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      /* height: 100%;
   width: auto; */
-  user-select: none;
-  pointer-events: none;
-  filter: brightness(0.6);
-}
+      user-select: none;
+      pointer-events: none;
+      filter: brightness(0.6);
+    }
 
-.responsive-video {
-  position: relative;
-  width: 100%;
-  height: auto;
-  background-color: #000;
-}
+    .responsive-video {
+      position: relative;
+      width: 100%;
+      height: auto;
+      background-color: #000;
+    }
 
-.responsive-video video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    .responsive-video video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-.responsive-video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    .responsive-video iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-.quote {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  line-height: 1.5;
-  text-align: center;
-  color: #fff;
-}
+    .quote {
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      line-height: 1.5;
+      text-align: center;
+      color: #fff;
+    }
 
-footer {
-  position: absolute;
-  top: 95%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: x-small;
-}
+    footer {
+      position: absolute;
+      top: 95%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      font-size: x-small;
+    }
 
-@media only screen and (min-width: 796px) {
-  nav {
-    display: flex;
-    justify-content: space-between;
-  }
+    @media only screen and (min-width: 796px) {
+      nav {
+        display: flex;
+        justify-content: space-between;
+      }
 
-  nav .logo {
-    padding-left: 48px;
-  }
+      nav .logo {
+        padding-left: 48px;
+      }
 
-  nav .openMenu {
-    display: none;
-  }
+      nav .openMenu {
+        display: none;
+      }
 
-  nav .mainMenu {
-    margin-top: 0px;
-    padding: 0px 48px 0px 0px;
-    height: fit-content;
-    flex-wrap: wrap;
-    display: inline-block;
-  }
+      nav .mainMenu {
+        margin-top: 0px;
+        padding: 0px 48px 0px 0px;
+        height: fit-content;
+        flex-wrap: wrap;
+        display: inline-block;
+      }
 
-  nav .mainMenu li {
-    display: inline-block;
-  }
-  
-  nav .mainMenu li a {
-    line-height: 76px;
-  }
+      nav .mainMenu li {
+        display: inline-block;
+      }
 
-  nav .mainMenu .closeMenu {
-    display: none;
-  }
-}
+      nav .mainMenu li a {
+        line-height: 76px;
+      }
 
-@media only screen and (min-width: 1280px) {
-  nav .logo {
-    padding-left: 250px;
-  }
+      nav .mainMenu .closeMenu {
+        display: none;
+      }
+    }
 
-  nav .mainMenu {
-    margin-top: 0px;
-    padding-right: 250px;
-  }
+    @media only screen and (min-width: 1280px) {
+      nav .logo {
+        padding-left: 250px;
+      }
 
-  nav .mainMenu li {
-    padding-left: 36px;
-  }
-}
+      nav .mainMenu {
+        margin-top: 0px;
+        padding-right: 250px;
+      }
 
-@media only screen and (min-width: 1920px) {
-  * {
-    font-size: medium;
-  }
+      nav .mainMenu li {
+        padding-left: 36px;
+      }
+    }
 
-  footer {
-    font-size: small;
-  }
+    @media only screen and (min-width: 1920px) {
+      * {
+        font-size: medium;
+      }
 
-  nav .logo {
-    padding-left: 400px;
-  }
+      .caption {
+        font-size: small;
+      }
 
-  nav .mainMenu {
-    padding-right: 400px;
-  }
+      footer {
+        font-size: small;
+      }
 
-  nav .mainMenu li {
-    padding-left: 48px;
-  }
-}
+      nav .logo {
+        padding-left: 400px;
+      }
+
+      nav .mainMenu {
+        padding-right: 400px;
+      }
+
+      nav .mainMenu li {
+        padding-left: 48px;
+      }
+    }
   </style>
   <title>Tino Selić</title>
 </head>
