--- a/pages/about.html
+++ b/pages/about.html
@@ -459,6 +459,10 @@
         font-size: medium;
       }
 
+      .caption {
+        font-size: small;
+      }
+
       footer {
         font-size: small;
       }
