Index background video width fixed.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
     video {
       display: flex;
       justify-content: center;
+      height: 100vh;
     }
 
     .background-video {
@@ -190,9 +191,9 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      line-height: 1.5;
-      text-align: center;
       color: #fff;
+      text-align: center;
+      line-height: 1.5;
     }
 
     footer {
@@ -237,6 +238,10 @@
       nav .mainMenu .closeMenu {
         display: none;
       }
+
+      video {
+        height: 100vh;
+      }
     }
 
     @media only screen and (min-width: 1280px) {
@@ -251,6 +256,11 @@
 
       nav .mainMenu li {
         padding-left: 36px;
+      }
+
+      video {
+        width: 100vw;
+        height: auto;
       }
     }
 
