--- a/pages/work.html
+++ b/pages/work.html
@@ -120,6 +120,12 @@
         Space Jellyfish (2018)
       </a>
     </div>
+    <div class="project">
+      <a href="2017/2017_m302.html">
+        <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
+        M302 (2017)
+      </a>
+    </div>
   </main>
   <footer id="copyright"></footer>
   <script src="../app.js"></script>
