--- a/index.html
+++ b/index.html
@@ -289,6 +289,20 @@
         padding-left: 48px;
       }
     }
+
+    @media only screen and (min-width: 2560px) {
+      nav .logo {
+        padding-left: 1000px;
+      }
+
+      nav .mainMenu {
+        padding-right: 1000px;
+      }
+
+      nav .mainMenu li {
+        padding-left: 72px;
+      }
+    }
   </style>
   <title>Tino Selić</title>
 </head>
