--- a/pages/about.html
+++ b/pages/about.html
@@ -499,6 +499,28 @@
         width: 30%;
       }
     }
+
+    @media only screen and (min-width: 2560px) {
+      nav .logo {
+        padding-left: 1000px;
+      }
+
+      nav .mainMenu {
+        padding-right: 1000px;
+      }
+
+      nav .mainMenu li {
+        padding-left: 72px;
+      }
+
+      main {
+        margin: 0 1000px;
+      }
+
+      .headline {
+        width: calc(50% - 1000px);
+      }
+    }
   </style>
   <title>Tino Selić - About</title>
 </head>
