Height vh do dvh.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     nav .mainMenu {
-      height: 100vh;
+      height: 100dvh;
       margin-top: 18px;
       display: none;
       flex-direction: column;
@@ -147,7 +147,7 @@
     video {
       display: flex;
       justify-content: center;
-      height: 100vh;
+      height: 100dvh;
     }
 
     .background-video {
@@ -237,10 +237,6 @@
 
       nav .mainMenu .closeMenu {
         display: none;
-      }
-
-      video {
-        height: 100vh;
       }
     }
 
