About texts updated.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     </video>
   </div>
   <div class="quote">
-    Hallo. My name is Tino Selic, and I'm a Helsinki-based digital artist and designer.
+    Tino Selić is a Helsinki-based digital artist and designer.
   </div>
   <footer id="copyright"></footer>
   <script src="app.js"></script>
