--- a/pages/about.html
+++ b/pages/about.html
@@ -543,19 +543,74 @@
         <h1>About</h1>
         <br>
         <p>
-          Hallo. My name is Tino Selic, I am a Helsinki-based digital artist and designer.
+          Currently completing his Master of Arts degree in New Media at Aalto University (Espoo), Tino Selić is a
+          versatile digital artist and designer whose work spans a wide range of media&mdash;from 3D modelling and
+          animation to websites, games, and interactive experiences.
           <br>
           <br>
-          I graduated with a Bachelor of Arts degree in Interactive Media from Augsburg University of Applied
-          Sciences in 2021. Currently, I am studying New Media (Master of Arts) at Aalto University in Espoo,
-          Finland.
+          Tino Selić's artistic work is characterised by immersive and thought-provoking visuals with a deep
+          understanding of composition, colour, and lighting. He seamlessly blends realism with surrealism, exploring
+          themes of nature, technology, and human emotion. In his work, Tino Selić unites a strong sense of mood,
+          narrative, and attention to detail with a passion for experimentation.
           <br>
           <br>
-          I am passionate about animation and 3D, as well as interactive experiences, websites, and games. My
-          favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
-          InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in
-          Java, Javascript, HTML, and CSS. I speak German, English, and a bit of Finnish.
+          As a designer, Tino Selić values precision, clarity, and affordance, and keenly understands user behaviour
+          to enhance usability and accessibility. His design process prioritises empathy, ensuring that each decision is
+          made with the end-user's needs and pain points in mind. By leveraging skills in layout, typography, and
+          graphic design, Tino Selić creates engaging interfaces that are not only aesthetically pleasing but also
+          highly functional. Additionally, he is experienced in solving UX challenges across diverse media.
         </p>
+        <br>
+        <br>
+        <br>
+        <h1>Tools</h1>
+        <br>
+        <p>
+          Unreal Engine
+          <br>
+          Blender
+          <br>
+          TouchDesigner
+          <br>
+          Photoshop
+          <br>
+          InDesign
+          <br>
+          Illustrator
+          <br>
+          After Effects
+          <br>
+          Premiere Pro
+        </p>
+        <br>
+        <br>
+        <br>
+        <h1>Programming</h1>
+        <br>
+        <p>
+          Java
+          <br>
+          Javascript
+          <br>
+          HTML/CSS
+          <br>
+          C++ (Unreal Engine)
+        </p>
+        <br>
+        <br>
+        <br>
+        <h1>Communication</h1>
+        <br>
+        <p>
+          German (Native)
+          <br>
+          English (Professional)
+          <br>
+          Finnish (Elementary)
+        </p>
+        <br>
+        <br>
+        <br><!-- 
         <br>
         <br>
         <br>
@@ -590,11 +645,7 @@
           Remote
           <br>
           August - October 2022
-        </p>
-        <br>
-        <br>
-        <br>
-        <br>
+        </p>-->
       </div>
       <div class="about-column-right">
         <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
@@ -612,6 +663,8 @@
           <a href="https://www.artstation.com/tinoselic" target="_blank">Artstation</a>
           <br>
           <a href="https://www.behance.net/tinoselic" target="_blank">Behance</a>
+          <br>
+          <a href="https://github.com/tinoselic" target="_blank">GitHub</a>
           <br>
           <a href="https://www.instagram.com/tinoselic/" target="_blank">Instagram</a>
           <br>
