About text updated.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     </video>
   </div>
   <div class="quote">
-    Tino Selić is a Helsinki-based digital artist and designer.
+    Hallo. My name is Tino Selić, I am a Helsinki-based digital artist and designer.
   </div>
   <footer id="copyright"></footer>
   <script src="app.js"></script>
