--- a/pages/about.html
+++ b/pages/about.html
@@ -543,22 +543,25 @@
         <h1>About</h1>
         <br>
         <p>
-          Currently completing his Master of Arts degree in New Media at Aalto University (Espoo), Tino Selić is a
-          versatile digital artist and designer whose work spans a wide range of media&mdash;from 3D modelling and
-          animation to websites, games, and interactive experiences.
+          Hallo. My name is Tino Selić, I am a Helsinki-based digital artist and designer.
           <br>
           <br>
-          Tino Selić's artistic work is characterised by immersive and thought-provoking visuals with a deep
-          understanding of composition, colour, and lighting. He seamlessly blends realism with surrealism, exploring
-          themes of nature, technology, and human emotion. In his work, Tino Selić unites a strong sense of mood,
-          narrative, and attention to detail with a passion for experimentation.
+          I am a versatile digital artist and designer whose work spans a wide range of media—from 3D modelling and
+          animation to websites, games, and interactive experiences. Currently, I am completing my Master of Arts degree
+          in New Media at Aalto University (Espoo).
           <br>
           <br>
-          As a designer, Tino Selić values precision, clarity, and affordance, and keenly understands user behaviour
-          to enhance usability and accessibility. His design process prioritises empathy, ensuring that each decision is
-          made with the end-user's needs and pain points in mind. By leveraging skills in layout, typography, and
-          graphic design, Tino Selić creates engaging interfaces that are not only aesthetically pleasing but also
-          highly functional. Additionally, he is experienced in solving UX challenges across diverse media.
+          My artistic work is characterised by immersive and thought-provoking visuals with a deep understanding of
+          composition, colour, and lighting. I pursue blending realism with surrealism, while exploring themes of
+          nature, technology, and human emotion. In my work, I unite a strong sense of mood, narrative, and attention to
+          detail with a passion for experimentation.
+          <br>
+          <br>
+          As a designer, I value precision, clarity, and affordance, and keenly understand user behaviour to enhance
+          usability and accessibility. My design process prioritises empathy, ensuring that each decision is made with
+          the end-user's needs and pain points in mind. By leveraging skills in layout, typography, and graphic design,
+          I create engaging interfaces that are not only aesthetically pleasing but also highly functional.
+          Additionally, I am experienced in solving UX challenges across diverse media.
         </p>
         <br>
         <br>
