About text updated.

--- a/pages/about.html
+++ b/pages/about.html
@@ -551,16 +551,16 @@
           in New Media at Aalto University (Espoo).
           <br>
           <br>
-          My artistic work is characterised by immersive and thought-provoking visuals with a deep understanding of
-          composition, colour, and lighting. I pursue blending realism with surrealism, while exploring themes of
-          nature, technology, and human emotion. In my work, I unite a strong sense of mood, narrative, and attention to
-          detail with a passion for experimentation.
+          My work is characterised by atmospheric and thought-provoking visuals, blending realism with surrealism to
+          create immersive experiences. I explore themes of nature, technology, and human emotion, often weaving
+          narratives about the past and the future. Colour and light play a crucial role, as I am often inspired by
+          impressionist works. With an attention to detail and a passion for experimentation, I pursue pushing creative
+          boundaries.
           <br>
           <br>
           As a designer, I value precision, clarity, and affordance, and keenly understand user behaviour to enhance
           usability and accessibility. My design process prioritises empathy, ensuring that each decision is made with
-          the end-user's needs and pain points in mind. By leveraging skills in layout, typography, and graphic design,
-          I create engaging interfaces that are not only aesthetically pleasing but also highly functional.
+          the end-user's needs and pain points in mind. I pursue minimalistic designs—form follows function.
           Additionally, I am experienced in solving UX challenges across diverse media.
         </p>
         <br>
