--- a/pages/about.html
+++ b/pages/about.html
@@ -543,81 +543,37 @@
         <h1>About</h1>
         <br>
         <p>
-          Hallo. My name is Tino Selić, I am a Helsinki-based digital artist and designer.
-          <br>
-          <br>
           I am a versatile digital artist and designer whose work spans a wide range of media—from 3D modelling and
-          animation to websites, games, and interactive experiences. Currently, I am completing my Master of Arts degree
-          in New Media at Aalto University (Espoo).
+          animation to websites, games, and interactive experiences. I graduated with a Bachelor of Arts degree in
+          Interactive Media from Augsburg University of Applied Sciences in 2021. Currently, I am studying New Media
+          (Master of Arts) at Aalto University in Espoo, Finland.
           <br>
           <br>
-          My work is characterised by atmospheric and thought-provoking visuals, blending realism with surrealism to
-          create immersive experiences. I explore themes of nature, technology, and human emotion, often weaving
-          narratives about the past and the future. Colour and light play a crucial role, as I am often inspired by
-          impressionist works. With an attention to detail and a passion for experimentation, I pursue pushing creative
-          boundaries.
+          In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
+          Lapland in Rovaniemi, Finland. There, I delved into Finland's natural phenomena such as the northern lights,
+          the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a great source of
+          inspiration for colour and light in my work.
           <br>
           <br>
-          As a designer, I value precision, clarity, and affordance, and keenly understand user behaviour to enhance
-          usability and accessibility. My design process prioritises empathy, ensuring that each decision is made with
-          the end-user's needs and pain points in mind. I pursue minimalistic designs—form follows function.
-          Additionally, I am experienced in solving UX challenges across diverse media.
+          My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
+          InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java
+          (Processing), C++ (Unreal Engine), JavaScript, HTML, and CSS.
+          <br>
+          <br>
+          I speak German, English, and a bit of Finnish.
         </p>
         <br>
         <br>
         <br>
-        <h1>Tools</h1>
         <br>
-        <p>
-          Unreal Engine
+        <h1>Clients</h1>
+        <br>
+        <p style="color: #fff;">
+          <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
           <br>
-          Blender
-          <br>
-          TouchDesigner
-          <br>
-          Photoshop
-          <br>
-          InDesign
-          <br>
-          Illustrator
-          <br>
-          After Effects
-          <br>
-          Premiere Pro
-        </p>
-        <br>
-        <br>
-        <br>
-        <h1>Programming</h1>
-        <br>
-        <p>
-          Java
-          <br>
-          Javascript
-          <br>
-          HTML/CSS
-          <br>
-          C++ (Unreal Engine)
-        </p>
-        <br>
-        <br>
-        <br>
-        <h1>Communication</h1>
-        <br>
-        <p>
-          German (Native)
-          <br>
-          English (Professional)
-          <br>
-          Finnish (Elementary)
-        </p>
-        <br>
-        <br>
-        <br><!-- 
-        <br>
-        <br>
-        <br>
-        <br>
+          <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
+          more_about_robots GmbH (Bernd Liepert)
+        </p><!-- 
         <h1>Experience</h1>
         <br>
         <p>
@@ -648,7 +604,11 @@
           Remote
           <br>
           August - October 2022
-        </p>-->
+        </p> -->
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
       <div class="about-column-right">
         <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
