Start quote tweaked.

--- a/index.html
+++ b/index.html
@@ -191,9 +191,10 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: #fff;
       text-align: center;
-      line-height: 1.5;
+      color: #fff;
+      font-weight: bold;
+      text-transform: uppercase;
     }
 
     footer {
@@ -238,6 +239,10 @@
       nav .mainMenu .closeMenu {
         display: none;
       }
+
+      .quote {
+        font-size: large;
+      }
     }
 
     @media only screen and (min-width: 1280px) {
@@ -254,6 +259,10 @@
         padding-left: 36px;
       }
 
+      .quote {
+        font-size: x-large;
+      }
+
       video {
         width: 100vw;
         height: auto;
@@ -263,14 +272,6 @@
     @media only screen and (min-width: 1920px) {
       * {
         font-size: medium;
-      }
-
-      .caption {
-        font-size: small;
-      }
-
-      footer {
-        font-size: small;
       }
 
       nav .logo {
@@ -283,6 +284,18 @@
 
       nav .mainMenu li {
         padding-left: 48px;
+      }
+
+      .caption {
+        font-size: small;
+      }
+
+      .quote {
+        font-size: xx-large;
+      }
+
+      footer {
+        font-size: small;
       }
     }
 
