Index quote regular and about text updated.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       transform: translate(-50%, -50%);
       text-align: center;
       color: #fff;
-      font-weight: bold;
+      /* font-weight: bold; */
       text-transform: uppercase;
     }
 
