--- a/pages/about.html
+++ b/pages/about.html
@@ -550,9 +550,10 @@
           <br>
           <br>
           In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
-          Lapland in Rovaniemi, Finland. There, I delved into Finland's natural phenomena such as the northern lights,
-          the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a great source of
-          inspiration for colour and light in my work.
+          Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
+          northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
+          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore themes of
+          nature, technology, and human emotion, often weaving narratives about the past and the future.
           <br>
           <br>
           My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
