2019_business_card added.

--- a/pages/work.html
+++ b/pages/work.html
@@ -33,7 +33,7 @@
     <div class="project">
       <a href="2024/2024_gn_website.html">
         <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
-      Grönlund-Nisunen: Artists' Website g-n.fi (2024)
+        Grönlund-Nisunen: Artists' Website g-n.fi (2024)
       </a>
     </div>
     <div class="project">
@@ -112,6 +112,13 @@
       <a href="2020/2020_clandestine_cult.html">
         <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
         Clandestine Cult (2020)
+      </a>
+    </div>
+    <div class="project">
+      <a href="2019/2019_business_card.html">
+        <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
+          alt="/2019_more_about_robots_BusinessCard_Cover">
+        more_about_robots: Business Card (2019)
       </a>
     </div>
     <div class="project">
