Gallery textbox with hover added.

--- a/pages/work.html
+++ b/pages/work.html
@@ -25,7 +25,7 @@
   <main>
     <!-- 
     <div class="project">
-      <a href="2023_sara_hilden.html">
+      <a href="2024_.html">
         <img class="gallery" src="images/GN_Website_PlaceholderImage.png" alt="">
       AURORA (2024)
       </a>
@@ -33,104 +33,155 @@
     <div class="project">
       <a href="2024/2024_gn_website.html">
         <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
-        Grönlund-Nisunen: Artists' Website g-n.fi (2024)
+        <div class="text-box">
+          <div class="project-title">Grönlund-Nisunen: Artists' Website g-n.fi</div>
+          <div class="project-subtitle">2024</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2024/2024_adungu_and_engoma.html">
         <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
-        Adungu & Engoma (2024)
+        <div class="text-box">
+          <div class="project-title">Adungu & Engoma</div>
+          <div class="project-subtitle">2024</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2024/2024_hibiscus.html">
         <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
-        Hibiscus (2024)
+        <div class="text-box">
+          <div class="project-title">Hibiscus</div>
+          <div class="project-subtitle">2024</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2024/2024_marko_vuokola_nordea.html">
         <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
-        Marko Vuokola: Screen Installation Concept Visualisation (2024)
+        <div class="text-box">
+          <div class="project-title">Marko Vuokola: Screen Installation<br>Concept Visualisation</div>
+          <div class="project-subtitle">2024</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_piru.html">
         <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
-        Piru (2023)
+        <div class="text-box">
+          <div class="project-title">Piru</div>
+          <div class="project-subtitle">2023</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_colour_and_perception.html">
         <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
-        Colour and Perception (2023)
+        <div class="text-box">
+          <div class="project-title">Colour and Perception</div>
+          <div class="project-subtitle">2023</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_gn_843m3h.html">
         <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
-        Grönlund-Nisunen: 84,3 m3/h (2023)
+        <div class="text-box">
+          <div class="project-title">Grönlund-Nisunen: 84,3 m3/h</div>
+          <div class="project-subtitle">2023</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2023/2023_sad.html">
         <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
-        SAD (2023)
+        <div class="text-box">
+          <div class="project-title">SAD</div>
+          <div class="project-subtitle">2023</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2022/2022_rdac.html">
         <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
-        RD:AC (2022)
+        <div class="text-box">
+          <div class="project-title">RD:AC</div>
+          <div class="project-subtitle">2022</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2022/2022_forum_mentoring_brochure.html">
         <img class="gallery" src="2022/2022_ForumMentoring_Brochure_1.jpg" alt="">
-        Forum Mentoring eV: Quality Standard Brochure (2022)
+        <div class="text-box">
+          <div class="project-title">Forum Mentoring eV:<br>Quality Standard Brochure</div>
+          <div class="project-subtitle">2022</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2021/2021_watch_out.html">
         <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
-        Watch Out! (2021)
+        <div class="text-box">
+          <div class="project-title">Watch Out!</div>
+          <div class="project-subtitle">2021</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2021/2021_sunrisepunk.html">
         <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
-        Sunrisepunk (2021)
+        <div class="text-box">
+          <div class="project-title">Sunrisepunk</div>
+          <div class="project-subtitle">2021</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2021/2021_blue_odyssey.html">
         <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
-        Blue Odyssey (2021)
+        <div class="text-box">
+          <div class="project-title">Blue Odyssey</div>
+          <div class="project-subtitle">2021</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2020/2020_clandestine_cult.html">
         <img class="gallery" src="2020/2020_ClandestineCult_6.jpg" alt="">
-        Clandestine Cult (2020)
+        <div class="text-box">
+          <div class="project-title">Clandestine Cult</div>
+          <div class="project-subtitle">2020</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2019/2019_business_card.html">
         <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
           alt="/2019_more_about_robots_BusinessCard_Cover">
-        more_about_robots: Business Card (2019)
+        <div class="text-box">
+          <div class="project-title">more_about_robots: Business Card</div>
+          <div class="project-subtitle">2019</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2018/2018_space_jellyfish.html">
         <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
-        Space Jellyfish (2018)
+        <div class="text-box">
+          <div class="project-title">Space Jellyfish</div>
+          <div class="project-subtitle">2018</div>
+        </div>
       </a>
     </div>
     <div class="project">
       <a href="2017/2017_m302.html">
         <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
-        M 3.02 (2017)
+        <div class="text-box">
+          <div class="project-title">M 3.02</div>
+          <div class="project-subtitle">2017</div>
+        </div>
       </a>
     </div>
   </main>
