Project title fixed.

--- a/pages/work.html
+++ b/pages/work.html
@@ -34,7 +34,7 @@
       <a href="2024/2024_gn_website.html">
         <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
         <div class="text-box">
-          <div class="project-title">Grönlund-Nisunen: Artists' Website g-n.fi</div>
+          <div class="project-title">Grönlund-Nisunen: g-n.fi</div>
           <div class="project-subtitle">2024</div>
         </div>
       </a>
