Font sizes edited.

--- a/index.html
+++ b/index.html
@@ -239,10 +239,6 @@
       nav .mainMenu .closeMenu {
         display: none;
       }
-
-      .quote {
-        font-size: large;
-      }
     }
 
     @media only screen and (min-width: 1280px) {
@@ -257,10 +253,6 @@
 
       nav .mainMenu li {
         padding-left: 36px;
-      }
-
-      .quote {
-        font-size: x-large;
       }
 
       video {
@@ -291,7 +283,7 @@
       }
 
       .quote {
-        font-size: xx-large;
+        font-size: medium;
       }
 
       footer {
