Responsive spacing tweaked.

--- a/pages/about.html
+++ b/pages/about.html
@@ -422,19 +422,19 @@
 
       p {
         max-width: 800px;
-        text-align: justify;
-        text-justify: inter-word;
+        /* text-align: justify;
+        text-justify: inter-word; */
       }
     }
 
     @media only screen and (min-width: 1280px) {
       nav .logo {
-        padding-left: 250px;
+        padding-left: 300px;
       }
 
       nav .mainMenu {
         margin-top: 0px;
-        padding-right: 250px;
+        padding-right: 300px;
       }
 
       nav .mainMenu li {
@@ -446,11 +446,11 @@
       }
 
       main {
-        margin: 0px 250px 0px;
+        margin: 0px 300px 0px;
       }
 
       .headline {
-        width: calc(60% - 250px);
+        width: calc(60% - 300px);
       }
     }
 
@@ -500,13 +500,13 @@
       }
     }
 
-    @media only screen and (min-width: 3840px) {
+    @media only screen and (min-width: 2560px) {
       nav .logo {
-        padding-left: 1000px;
+        padding-left: 600px;
       }
 
       nav .mainMenu {
-        padding-right: 1000px;
+        padding-right: 600px;
       }
 
       nav .mainMenu li {
@@ -514,11 +514,29 @@
       }
 
       main {
-        margin: 0 1000px;
+        margin: 0 600px;
       }
 
       .headline {
-        width: calc(50% - 1000px);
+        width: calc(50% - 600px);
+      }
+    }
+
+    @media only screen and (min-width: 3840px) {
+      nav .logo {
+        padding-left: 800px;
+      }
+
+      nav .mainMenu {
+        padding-right: 800px;
+      }
+
+      main {
+        margin: 0 800px;
+      }
+
+      .headline {
+        width: calc(50% - 800px);
       }
     }
   </style>
@@ -552,7 +570,8 @@
           In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
           Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
           northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
-          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore themes of
+          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
+          themes of
           nature, technology, and human emotion, often weaving narratives about the past and the future.
           <br>
           <br>
