--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
       box-sizing: border-box;
       color: #fff;
       font-family: "FreeSans", sans-serif;
-      font-size: small;
-      scroll-behavior: smooth;
-      /* cursor: crosshair; */
+      font-size: 14px;
     }
 
     body {
@@ -156,7 +154,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       /* height: 100%;
-  width: auto; */
+      width: auto; */
       user-select: none;
       pointer-events: none;
       filter: brightness(0.6);
@@ -203,7 +201,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
-      font-size: x-small;
+      font-size: 12px;
     }
 
     @media only screen and (min-width: 796px) {
@@ -270,19 +268,19 @@
 
     @media only screen and (min-width: 2560px) {
       * {
-        font-size: medium;
+        font-size: 16px;
       }
 
       .caption {
-        font-size: small;
+        font-size: 14px;
       }
 
       .quote {
-        font-size: medium;
+        font-size: 16px;
       }
 
       footer {
-        font-size: small;
+        font-size: 14px;
       }
 
       nav .logo {
