Marko Vuokola added to clients.

--- a/pages/about.html
+++ b/pages/about.html
@@ -475,6 +475,8 @@
         <p style="color: #fff;">
           <a href="https://g-n.fi/" target="_blank">Grönlund-Nisunen</a>
           <br>
+          <a href="https://anhava.com/artists/marko-vuokola/" target="_blank">Marko Vuokola</a>
+          <br>
           <a href="https://forum-mentoring.de/" target="_blank">Bundesverband Forum Mentoring e.V.</a>
           <br>
           more_about_robots GmbH (Bernd Liepert)
