YEAR_template updated.

--- a/pages/YEAR_template/YEAR_template.html
+++ b/pages/YEAR_template/YEAR_template.html
@@ -47,8 +47,7 @@
         </p>
       </div>
       <div class="column right">
-        <a href="../YEAR_template/PlaceholderImage.png" target="_blank"><img src="../YEAR_template/PlaceholderImage.png"
-            alt=""></a>
+        <img src="../YEAR_template/PlaceholderImage.png" alt="" class="thumbnail">
         <br>
         <br>
         <div class="responsive-video"><video controls src="../../videos/20230817_PortfolioBackgroundVideo.mp4"></video>
@@ -60,6 +59,10 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
+    </div>
+    <div id="previewModal" class="modal">
+      <div id="closePreview"><img src="../../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
+      <img id="previewImage" class="modal-content">
     </div>
   </main>
   <footer id="copyright"></footer>
